@@ -2706,6 +2706,7 @@ EXTRA_DIST = \
   poke.pktest/pktest-10.pk \
   poke.pktest/pktest-11.pk \
   poke.pktest/pktest-12.pk \
+  poke.pvm/pvm-insns-test.pk \
   poke.repl/repl.exp \
   poke.std/std.exp \
   poke.std/std-test.pk \
